# Obj-Detection-and-Tracking

./: README.md
beifen/: haar-frontface.xml  template.h
cascade_TM/: CMakeLists.txt
cascade_TM/src/: main.cpp  template.h
cascade_staple/src/: fhog.cpp  fhog.h  main.cpp  sse.hpp  staple_tracker.cpp  staple_tracker.hpp
color_detect/: CMakeLists.txt
serial_linux/: CMakeLists.txt
serial_linux/src/: main.cpp  serial.cpp  serial.h
serial_windows/: CMakeLists.txt
serial_windows/src/: main.cpp
track_TM/: CMakeLists.txt  main.cpp  template.h
track_opencv/: CMakeLists.txt
track_opencv/src/: tracker.cpp
track_staple/: CMakeLists.txt
track_staple/src/: fhog.cpp  fhog.h  main.cpp  sse.hpp  staple_tracker.cpp  staple_tracker.hpp
yolo_KCF/: CMakeLists.txt
yolo_KCF/src/: main.cpp  utils.h  yolo_v2_class.hpp
yolo_TM/: CMakeLists.txt
yolo_TM/src/: main.cpp  template.h  utils.h  yolo_v2_class.hpp
